force-app/main/default/objects/Enquiry_Organisations__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Dup__c</field>
                <operation>equals</operation>
                <value>External_Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enquiry Organisations</relationshipLabel>
        <relationshipName>Enquiry_Organisations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Enquiry Organisations</relationshipLabel>
        <relationshipName>Enquiry_Organisations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Contracting party</fullName>
                    <default>true</default>
                    <label>Contracting party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enquiry Organisations</label>
    <nameField>
        <displayFormat>EnquiryOrganisation-{0000}</displayFormat>
        <label>Enquiry Organisations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>